[gd_scene load_steps=8 format=3 uid="uid://dmm72lumy23dq"]

[ext_resource type="Script" path="res://UI/options_menu/options_menu.gd" id="1_07gku"]
[ext_resource type="PackedScene" uid="uid://ng35aw6p4k74" path="res://UI/options_menu/options_sound.tscn" id="1_17q4i"]
[ext_resource type="PackedScene" uid="uid://d2hndpfap7a77" path="res://UI/options_menu/options_gameplay.tscn" id="2_jdbdw"]
[ext_resource type="PackedScene" uid="uid://h4p4r66cv7mx" path="res://UI/options_menu/options_video.tscn" id="3_cols7"]

[sub_resource type="Animation" id="Animation_ib7vc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_0bn4o"]
resource_name = "fade_in"
length = 0.15
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.01, 0.15),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.01),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/HBoxContainer/Categories/ButtonCategorySound")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.15),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"grab_focus"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hppmr"]
_data = {
"RESET": SubResource("Animation_ib7vc"),
"fade_in": SubResource("Animation_0bn4o")
}

[node name="OptionsMenu" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_07gku")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Categories" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 15

[node name="Space2" type="Control" parent="MarginContainer/HBoxContainer/Categories"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonCategorySound" type="Button" parent="MarginContainer/HBoxContainer/Categories"]
unique_name_in_owner = true
layout_mode = 2
text = "Sound"

[node name="ButtonCategoryVideo" type="Button" parent="MarginContainer/HBoxContainer/Categories"]
unique_name_in_owner = true
layout_mode = 2
text = "Video"

[node name="ButtonCategoryGameplay" type="Button" parent="MarginContainer/HBoxContainer/Categories"]
unique_name_in_owner = true
layout_mode = 2
text = "Gameplay"

[node name="Space" type="Control" parent="MarginContainer/HBoxContainer/Categories"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonBack" type="Button" parent="MarginContainer/HBoxContainer/Categories"]
layout_mode = 2
text = "Back"

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Settings" type="MarginContainer" parent="MarginContainer/HBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="OptionsGameplay" parent="MarginContainer/HBoxContainer/PanelContainer/Settings" instance=ExtResource("2_jdbdw")]
unique_name_in_owner = true
layout_mode = 2

[node name="SettingsAudio" parent="MarginContainer/HBoxContainer/PanelContainer/Settings" instance=ExtResource("1_17q4i")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="OptionsVideo" parent="MarginContainer/HBoxContainer/PanelContainer/Settings" instance=ExtResource("3_cols7")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hppmr")
}

[connection signal="pressed" from="MarginContainer/HBoxContainer/Categories/ButtonCategorySound" to="." method="_on_button_category_sound_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Categories/ButtonCategoryVideo" to="." method="_on_button_category_video_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Categories/ButtonCategoryGameplay" to="." method="_on_button_category_gameplay_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Categories/ButtonBack" to="." method="_on_button_back_pressed"]
